--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
-<h1>Hello World!</h1>
+<div class="d-flex">
+  <!-- Sidebar -->
+  <div class="bg-dark border-right p-3" id="sidebar">
+    <h3 class="text-light">AngularGIF</h3>
+    <hr class="text-white">
+    <div class="list-group list-reset">
+      <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
+    </div>
+  </div>
+  <!-- End Sidebar -->
+
+  <div class="container">
+    <div class="row p-3">
+      <div class="col">
+        <h5>Search:</h5>
+        <input type="text" class="form-control" placeholder="Search GIF">
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col">
+        Lorem ipsum
+      </div>
+    </div>
+  </div>
+
+</div>
