--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,4 @@
 <div class="d-flex">
   <app-sidebar></app-sidebar>
-
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Search:</h5>
-        <input type="text" class="form-control" placeholder="Search GIF">
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col">
-        Lorem ipsum
-      </div>
-    </div>
-  </div>
-
+  <app-gif-page class="container"></app-gif-page>
 </div>
