Use @ViewChild to get values

--- a/src/app/gif/search/search.component.html
+++ b/src/app/gif/search/search.component.html
@@ -1,2 +1,8 @@
 <h5>Search:</h5>
-<input type="text" class="form-control" placeholder="Search GIF">
+<input
+  type="text"
+  class="form-control"
+  placeholder="Search GIF"
+  (keyup.enter)="search()"
+  #txtSearch
+>
