--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
   <hr class="text-white">
   <div class="list-group list-reset">
     <a *ngFor="let item of history"
+       (click)="search(item)"
        href="#"
        class="list-group-item list-group-item-action">{{item | titlecase}}</a>
   </div>
